# hydra-auction-onchain

./: .gitattributes  .gitignore  Makefile  cabal.project  flake.nix  fourmolu.yaml  hydra-auction-onchain.cabal
app/: Main.hs
compiled/: auction_escrow_validator.plutus  auction_metadata_validator.plutus  auction_minting_policy.plutus  bidder_deposit_validator.plutus  delegate_group_metadata_validator.plutus  delegate_group_minting_policy.plutus  standing_bid_validator.plutus
docs/: spec.md
src/: PPrelude.hs
src/HydraAuctionOnchain/: Helpers.hs  Scripts.hs
src/HydraAuctionOnchain/Errors/: AuctionEscrow.hs  StandingBid.hs
src/HydraAuctionOnchain/Errors/MintingPolicies/: Auction.hs  DelegateGroup.hs
src/HydraAuctionOnchain/Errors/Types/: AuctionTerms.hs
src/HydraAuctionOnchain/Errors/Validators/: AuctionEscrow.hs  BidderDeposit.hs  DelegateGroupMetadata.hs  StandingBid.hs
src/HydraAuctionOnchain/Lib/: Address.hs  Cose.hs  ScriptContext.hs  Serialization.hs  Value.hs
src/HydraAuctionOnchain/MintingPolicies/: Auction.hs  DelegateGroup.hs
src/HydraAuctionOnchain/Types/: AuctionEscrowState.hs  AuctionInfo.hs  AuctionTerms.hs  BidTerms.hs  BidderInfo.hs  DelegateGroupInfo.hs  DelegateInfo.hs  Error.hs  Scripts.hs  StandingBidState.hs  Tokens.hs
src/HydraAuctionOnchain/Validators/: AuctionEscrow.hs  AuctionMetadata.hs  BidderDeposit.hs  DelegateGroupMetadata.hs  StandingBid.hs
test/: Spec.hs
test/Spec/HydraAuctionOnchain/: Expectations.hs  Gen.hs  Helpers.hs
test/Spec/HydraAuctionOnchain/QuickCheck/: Gen.hs  Modifiers.hs
test/Spec/HydraAuctionOnchain/Types/: AuctionTerms.hs  BidTerms.hs  BidderInfo.hs  Redeemers.hs  StandingBidState.hs
test/Spec/HydraAuctionOnchain/Validators/: StandingBid.hs
